--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobirise.com">GUSSIE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://gexiao37.github.io/">GUSSIE</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best free site maker</a></section><section class="header3 cid-rTLzzyiYAp mbr-parallax-background" id="header3-i">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page creator</a></section><section class="header3 cid-rTLzzyiYAp mbr-parallax-background" id="header3-i">
 
     
 
