--- a/DJ.html
+++ b/DJ.html
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://mobirise.com">GUSSIE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-4" href="https://gexiao37.github.io/">GUSSIE</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="mbr-section content4 cid-rUBsldSWon" id="content4-o">
+<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="mbr-section content4 cid-rUBsldSWon" id="content4-o">
 
     
 
