--- a/DJ.html
+++ b/DJ.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html website builder</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
+<section class="engine"><a href="https://mobirise.ws/c">best free web site maker</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
 
     
 
@@ -80,13 +80,12 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>互联网医疗从2011年萌芽，伴随着中国医疗的痛点与创业者的理想：好大夫创始人王航在孩子两岁时创业，微医创始人廖杰远因为侄子的求医经历创业，春雨创始人张锐出身医生家庭，“从小目睹医生之不易与病人之艰难”，他们<strong>酝酿出一个想要颠覆传统医疗的理想</strong>。</p><p>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>互联网医疗从2011年萌芽，伴随着中国医疗的痛点与创业者的理想——好大夫创始人王航在孩子两岁时创业，微医创始人廖杰远因为侄子的求医经历创业，春雨创始人张锐出身医生家庭，这些创始者们<strong>酝酿出一个想要颠覆传统医疗的理想</strong>。</p><p>
 </p><div>
-</div><div>2014年互联网医疗真正火起来。腾讯通过大笔投资入局，以当时的行业最高记录领投了还叫“挂号网”的微医；阿里通过支付宝和阿里健康，双路布局互联网医疗。<strong>两大互联网巨头的进入，全面开启了互联网医疗的“大圈地”时代</strong>——BAT公司、各路挂号平台、医疗信息化公司、初创公司纷纷入局；大量资金，投资机构的，上市公司的，私人老板的，短期内集中涌入这个行业；针对患者、医生、医院、医保、医药，不同公司开发出无数不同专科、不同阶段、不同功能的应用。</div><div><br></div><div>然而<strong>两年后，互联网医疗的形势就急转直下</strong>。
+</div><div>2014年腾讯通过大笔投资入局，以当时的行业最高记录领投了还叫“挂号网”的微医；阿里通过支付宝和阿里健康，双路布局互联网医疗。<strong>两大互联网巨头的进入，全面开启了互联网医疗的“大圈地”时代</strong>——BAT公司、各路挂号平台、医疗信息化公司、初创公司纷纷入局；大量资金，投资机构的，上市公司的，私人老板的，短期内集中涌入这个行业；针对患者、医生、医院、医保、医药，不同公司开发出无数不同专科、不同阶段、不同功能的应用。</div><div><br></div><div><strong>两年后，互联网医疗的形势就急转直下</strong>。
 </div><div><strong>
 </strong></div><div>2016年10月5日，张锐意外去世，春雨IPO之路被迫中断；2017年2月，百度宣布裁撤了300人团队的“医疗事业部”；另据报道，2017年，高达1000家互联网医疗相关企业被注销。
-</div><div><br></div><div>另一方面，2018年，在放任互联网医疗行业自我探索数年之后，《互联网诊疗管理办法（试行）》、《互联网医院管理办法（试行）》和《远程医疗服务管理规范（试行）》同时出台。这一系列法规在填补监管空白的同时，也界定了互联网医疗的服务范围。曾经包罗万象的大胆尝试，被缩窄到了红线之内——这三种服务都离不开“医疗机构”。
-</div><div><br></div><div>互联网医疗开始沉寂，直到2020年新冠肺炎的爆发，它似乎遇到了新风口。</div><p></p></div>
+</div><div><br></div><div>另一方面，2018年，在放任互联网医疗行业自我探索数年之后，《互联网诊疗管理办法（试行）》、《互联网医院管理办法（试行）》和《远程医疗服务管理规范（试行）》同时出台。这一系列法规在填补监管空白的同时，也界定了互联网医疗的服务范围。曾经包罗万象的大胆尝试，被缩窄到了红线之内。</div><div><br></div><div>互联网医疗走向沉寂阶段，一开始的痛点与理想面对现实始终没有找到突破口。2020年，新冠疫情爆发。为了防止密切解除，中国倡导居家隔离，人们体验了从线下转到线上的生活方式的改变。丁香园作为医疗科普平台，疫情刚发生时在防疫科普、疫情数据上做出了杰出贡献，为受众留下了深刻印象。而在选择线下医疗具有风险性的时候，人们的目光也转移到线上医疗平台。</div><div><br></div><div>互联网医疗平台获得了更多的关注，这会是一个风口吗？</div><p></p></div>
         </div>
     </div>
 </section>
@@ -181,7 +180,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p><strong>人们在搜索引擎中的搜索数据显示，大众对互联网医疗平台的关注伴随着对疫情的关注，而随着疫情热度的降低，互联网医疗平台所获得的注意力也开始跌落。</strong></p><p><strong>风口还是瓶颈？搜索数据并没有告诉我们答案。</strong></p></blockquote>
+                <blockquote><p><strong>人们在搜索引擎中的搜索数据显示，大众对互联网医疗平台的关注伴随着对疫情的关注，而随着疫情热度的降低，互联网医疗平台所获得的注意力也开始跌落。</strong></p></blockquote>
             </div>
         </div>
     </div>
