--- a/FC.html
+++ b/FC.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section once="" class="cid-rUCi8kpzpj mbr-reveal" id="footer7-y">
+<section class="engine"><a href="https://mobirise.ws/q">offline website creator download</a></section><section once="" class="cid-rUCi8kpzpj mbr-reveal" id="footer7-y">
 
     
 
@@ -157,7 +157,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2020 GeXiao - All Rights Reserved
+                    © Copyright 2020 Gx - All Rights Reserved
                 </p>
             </div>
         </div>
