--- a/DJ.html
+++ b/DJ.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple website creator</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
 
 
 
@@ -545,7 +545,7 @@
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
-       <!-- <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=xfhhaTThl11qYVrqLZii6w8qE5ggnhrY&__ec_v__=20190126"></script> -->
+       <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=xfhhaTThl11qYVrqLZii6w8qE5ggnhrY&__ec_v__=20190126"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
        <script type="text/javascript">
 var dom = document.getElementById("container");
@@ -821,6 +821,28 @@ if (option && typeof option === "object") {
     </div>
 
 
+</section>
+
+<section class="mbr-section article content1 cid-rZlHDtoe4y" id="content1-33">
+
+
+
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">此外，我们抓取了丁香园问诊医生的地区来源，发现来自浙江医院的医生共505人，位居第一。进入前五名的还有山东省、河北省、湖南省和广东省。由上图总体来看，来自东部地区的医生远远多于西部，这意味着丁香医生的来源与医疗资源的发展水平密切相关。</div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article content1 cid-rZlJm3uaam" id="content1-34">
+
+
+
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><strong>“综合实力”最强的医生长什么样？</strong></p><p><strong>这些人，最适合线上问诊</strong></p><p><strong>线上问诊，仍然不易</strong></p><p><strong>（上述三个板块待补充）</strong></p></div>
+        </div>
+    </div>
 </section>
 
 <section once="" class="cid-rW1dZcX1LG" id="footer6-1z">
