--- a/DJ.html
+++ b/DJ.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create own website</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
+<section class="engine"><a href="https://mobirise.ws/a">best site builder</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
 
 
 
@@ -477,7 +477,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><strong><em>皮肤科问诊量第一</em></strong></div><div><strong><em><br></em></strong></div><div>丁香医生网上问诊的科室共分为以下29个，分别为皮肤科，妇科，儿科，消化内科，泌尿外科，骨科，眼科，口腔科，耳鼻喉科，呼吸科，普通内科，普外科，神经科，心血管内科，传染感染科，内分泌科，精神心理科，整形科，性病科，血液科，肿瘤科，肝胆外科，乳腺外科，肾脏内科，神经外科，风湿科，影响检验科，一秒科，疼痛麻醉科。我们收集了各个科室的总问诊量，并进行了排序，整理出了问诊量最多的科室以及平均评分最高的科室排行榜。</div><div><br></div><div><strong><em>疼痛科麻醉科好评排行第一，问诊量TOP5仅有皮肤科位列好评TOP5</em></strong></div><div><strong><em><br></em></strong></div><div>在好评科室中，疼痛科麻醉科、影像检验科、传染感染科、皮肤科以及肾脏内科位列前五，除了皮肤科外，其余科室并不是热门科室。而热门科室在评分中也并不靠前。</div></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><div><strong><em>皮肤科问诊量第一</em></strong></div><div><strong><em><br></em></strong></div><div>丁香医生网上问诊的科室共分为以下30个，分别为皮肤科，妇科，儿科，消化内科，泌尿外科，骨科，眼科，口腔科，耳鼻喉科，呼吸科，普通内科，普外科，神经科，心血管内科，传染感染科，内分泌科，精神心理科，整形科，性病科，血液科，肿瘤科，肝胆外科，乳腺外科，肾脏内科，神经外科，风湿科，影像检验科，疫苗科，药剂科，麻醉科。我们收集了各个科室的总问诊量，并进行了排序，整理出了问诊量最多的科室以及平均评分最高的科室排行榜。</div><div><br></div><div><strong><em>疼痛科麻醉科好评排行第一，问诊量TOP5仅有皮肤科位列好评TOP5</em></strong></div><div><strong><em><br></em></strong></div><div>在好评科室中，疼痛科麻醉科、影像检验科、传染感染科、皮肤科以及肾脏内科位列前五，除了皮肤科外，其余科室并不是热门科室。而热门科室在评分中也并不靠前。</div></div>
         </div>
     </div>
 </section>
@@ -540,7 +540,7 @@
  &nbsp;</em></strong></div><div><strong><br></strong></div><div>对于一个患者来说，想要联系上一位医生进行咨询，首先要在平台上搜索科室或疾病名称。对于每个科室，平台按照综合因素即资质、评分、问诊量等来给出“推荐医生”的排序。那么，什么样的医生会被平台优先推荐给患者呢？通过对以上因素的综合分析，丁香医生平台上最容易被匹配到的医生特征显现出来。
 </div><div><br></div><div>分别选取30个科室中排序最前的3位医生，一共90名。其中男性达到了61位，男女比例大致为2：1。从职称上看，主治医师占比最高。就平台提供的医生关键词分析，“医学博士”、“海外进修”、“专业性优秀”、“快速响应”、“耐心细致”成为平台推荐医生的重要指标。同时，由关键词中的“周排名”可以推断，平台每周会根据患者的反馈进行实时排名与推荐权重更新。
 </div><div><br></div><div>90位推荐医生的月平均回答为103次，但个体差异较大，回答最多的医生每月613次，而部分医生只有个位数。皮肤科和小儿内科的问诊量相对较大，外科例如肝胆外科、心胸外科以及专业度稍强的麻醉科的问诊量相对较少，月问答只有20左右。但无论其量的多少，医生都收获了较多好评，平均分达到了4.975（满分5）。
-</div><div><br></div><div>不同科室展现出不同的收费标准，从19~59元不等，总平均问诊价格是40.02元。就地区而言，没有表现出明显差异，几乎均匀遍布全国。</div><div><strong><br></strong></div></div>
+</div><div><br></div><div>不同科室展现出不同的收费标准，从19~59元不等，总平均问诊价格是40.02元。</div><div><strong><br></strong></div></div>
         </div>
     </div>
 </section>
