--- a/DJ.html
+++ b/DJ.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best site builder</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
+<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
 
 
 
@@ -303,20 +303,6 @@
     </div>
 </section>
 
-<section class="mbr-section article content11 cid-rW11BJpnSU" id="content11-1t">
-
-
-    <div class="container">
-        <div class="media-container-row">
-            <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-5">
-                <ol>
-                    <li><strong>&nbsp; “丁香医生”评分处于中上水平。安卓市场中，1星评价占比较多。</strong></li><li><strong>疫情影响排名上升，评分情感倾向正面居多。</strong></li><li><strong>使用感受两极分化，互联网医疗仍需突破自身难题。</strong><br></li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</section>
-
 <section class="cid-rWuiGZaFu1" id="image3-24">
 
 
@@ -335,7 +321,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>在苹果市场中，“丁香医生”的当前评分为4.9。总评分次数将近10万，其中大部分用户给与了5星好评，只有1.8%的用户给了1星的评价。从评分来看，“丁香医生”在苹果市场的用户评价良性居多。
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><strong><em>评分处于中上水平，<span style="font-size: 1rem;">安卓市场中 1 星评价占比较多</span></em></strong></p><p>在苹果市场中，“丁香医生”的当前评分为4.9。总评分次数将近10万，其中大部分用户给与了5星好评，只有1.8%的用户给了1星的评价。从评分来看，“丁香医生”在苹果市场的用户评价良性居多。
 </p><p></p><div>在安卓市场上，评分数据较为分散。在今年的评分中，我们只获取了累计77次评分，在这些评分中，2020年2月的评分次数最多。<span style="font-size: 1rem;">根据计算，安卓2020年1月1日-2020年4月13日的评分平均值为3，处于中上评价。<strong>相较于苹果市场的评分而言，安卓市场的评分较低。 &nbsp;</strong></span><span style="font-size: 1rem;"><strong>在分布上，5星和1星两极化趋势明显，相较于苹果市场5星占大多数而言，安卓市场的1星评价明显增多。</strong></span></div><p></p></div>
         </div>
     </div>
@@ -387,9 +373,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">
-                    至于使用感受，他们有这样几种评价：
-                </h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">使用感受两极分化，仍需突破自身难题</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">（以下评价来自微博评论、app评分抽取分类）</h3>
 
             </div>
@@ -407,7 +391,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>响应、快递速度慢：</strong></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>响应速度慢：</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><em><strong>小西瓜是个乖宝宝：</strong></em>今天第一次付费20元问诊了，回复蛮仔细，就是响应速度太慢了。幸好宝宝湿疹不严重，这要是等回复拖上一整天可不得了。<br><em><strong>YykkxX·：</strong></em>可是我昨晚问诊到现在都没人接诊。。<br><strong>&nbsp;<em>LoooGaky：</em></strong>等了一天了也没人接诊，还收费，跟其他平台比起来逊色一些。宝石花大健康和中华医学会北京分会都很快。<br></p>
                     </div>
                 </div>
@@ -602,282 +586,282 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">丁香园问诊医生来源分布</h1>
                 <div id="container" style="height: 400px"></div>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
-     <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=xfhhaTThl11qYVrqLZii6w8qE5ggnhrY&__ec_v__=20190126"></script>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
-     <script type="text/javascript">
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
+       <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=xfhhaTThl11qYVrqLZii6w8qE5ggnhrY&__ec_v__=20190126"></script>
+       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
+       <script type="text/javascript">
 var dom = document.getElementById("container");
 var myChart = echarts.init(dom);
 var app = {};
 option = null;
 var data = [
-   {name: '河北', value: 205},
-   {name: '山西', value: 105},
-   {name: '辽宁', value: 174},
-   {name: '吉林', value: 35},
-   {name: '黑龙江', value: 155},
-   {name: '江苏', value: 244},
-   {name: '浙江', value: 505},
-   {name: '安徽', value: 177},
-   {name: '福建', value: 155},
-   {name: '江西', value: 73},
-   {name: '山东', value: 393},
-   {name: '河南', value: 294},
-   {name: '湖北', value: 315},
-   {name: '湖南', value: 174},
-   {name: '广东', value: 282},
-   {name: '海南', value: 24},
-   {name: '四川', value: 224},
-   {name: '贵州', value: 74},
-   {name: '云南', value: 39},
-   {name: '陕西', value: 8},
-   {name: '甘肃', value: 16},
-   {name: '青海', value: 8},
-   {name: '台湾', value: 0},
-   {name: '北京', value: 223},
-   {name: '上海', value: 203},
-   {name: '重庆', value: 92},
-   {name: '天津', value: 110},
-   {name: '广西', value: 108},
-   {name: '宁夏', value: 3},
-   {name: '西藏', value: 2},
-   {name: '新疆', value: 44},
-   {name: '内蒙古', value: 36},
-   {name: '香港', value: 0},
-   {name: '澳门', value: 1},
+     {name: '河北', value: 205},
+     {name: '山西', value: 105},
+     {name: '辽宁', value: 174},
+     {name: '吉林', value: 35},
+     {name: '黑龙江', value: 155},
+     {name: '江苏', value: 244},
+     {name: '浙江', value: 505},
+     {name: '安徽', value: 177},
+     {name: '福建', value: 155},
+     {name: '江西', value: 73},
+     {name: '山东', value: 393},
+     {name: '河南', value: 294},
+     {name: '湖北', value: 315},
+     {name: '湖南', value: 174},
+     {name: '广东', value: 282},
+     {name: '海南', value: 24},
+     {name: '四川', value: 224},
+     {name: '贵州', value: 74},
+     {name: '云南', value: 39},
+     {name: '陕西', value: 8},
+     {name: '甘肃', value: 16},
+     {name: '青海', value: 8},
+     {name: '台湾', value: 0},
+     {name: '北京', value: 223},
+     {name: '上海', value: 203},
+     {name: '重庆', value: 92},
+     {name: '天津', value: 110},
+     {name: '广西', value: 108},
+     {name: '宁夏', value: 3},
+     {name: '西藏', value: 2},
+     {name: '新疆', value: 44},
+     {name: '内蒙古', value: 36},
+     {name: '香港', value: 0},
+     {name: '澳门', value: 1},
 
 ];
 var geoCoordMap = {
 
-  '西藏':[91.11,29.97],
-  '上海':[121.48,31.22],
-  '福建':[118.1,24.46],
-  '广东':[113.23,23.16],
-  '山西':[112.53,37.87],
-  '云南':[102.73,25.04],
-  '深圳':[114.07,22.62],
-  '海南':[110.35,20.02],
-  '辽宁':[123.38,41.8],
-  '江西':[115.89,28.68],
-  '吉林':[125.35,43.88],
-  '内蒙古':[111.65,40.82],
-  '四川':[104.06,30.67],
-  '广西':[110.28,25.29],
-  '陕西':[108.95,34.27],
-  '山西':[111.3,37.37],
-  '重庆':[106.54,29.59],
-  '江苏':[118.78,32.04],
-  '贵州':[106.71,26.57],
-  '北京':[116.46,39.92],
-  '新疆':[87.68,43.77],
-  '浙江':[120.19,30.26],
-  '山东':[117,36.65],
-  '甘肃':[103.73,36.03],
-  '天津':[117.2,39.13],
-  '河南':[113.65,34.76],
-  '黑龙江':[126.63,45.75],
-  '河北':[114.48,38.03],
-  '湖南':[113,28.21],
-  '安徽':[117.27,31.86],
-  '湖北':[114.31,30.52],
-  '青海':[106.27,38.47]
+    '西藏':[91.11,29.97],
+    '上海':[121.48,31.22],
+    '福建':[118.1,24.46],
+    '广东':[113.23,23.16],
+    '山西':[112.53,37.87],
+    '云南':[102.73,25.04],
+    '深圳':[114.07,22.62],
+    '海南':[110.35,20.02],
+    '辽宁':[123.38,41.8],
+    '江西':[115.89,28.68],
+    '吉林':[125.35,43.88],
+    '内蒙古':[111.65,40.82],
+    '四川':[104.06,30.67],
+    '广西':[110.28,25.29],
+    '陕西':[108.95,34.27],
+    '山西':[111.3,37.37],
+    '重庆':[106.54,29.59],
+    '江苏':[118.78,32.04],
+    '贵州':[106.71,26.57],
+    '北京':[116.46,39.92],
+    '新疆':[87.68,43.77],
+    '浙江':[120.19,30.26],
+    '山东':[117,36.65],
+    '甘肃':[103.73,36.03],
+    '天津':[117.2,39.13],
+    '河南':[113.65,34.76],
+    '黑龙江':[126.63,45.75],
+    '河北':[114.48,38.03],
+    '湖南':[113,28.21],
+    '安徽':[117.27,31.86],
+    '湖北':[114.31,30.52],
+    '青海':[106.27,38.47]
 };
 
 var convertData = function (data) {
-  var res = [];
-  for (var i = 0; i < data.length; i++) {
-      var geoCoord = geoCoordMap[data[i].name];
-      if (geoCoord) {
-          res.push({
-              name: data[i].name,
-              value: geoCoord.concat(data[i].value)
-          });
-      }
-  }
-  return res;
+    var res = [];
+    for (var i = 0; i < data.length; i++) {
+        var geoCoord = geoCoordMap[data[i].name];
+        if (geoCoord) {
+            res.push({
+                name: data[i].name,
+                value: geoCoord.concat(data[i].value)
+            });
+        }
+    }
+    return res;
 };
 
 option = {
-  title: {
-      text: '丁香园问诊医生来源分布图 ',
-      subtext: 'data from www.dxy.co',
-      sublink: 'http://www.dxy.com',
-      left: 'center'
-  },
-  tooltip : {
-      trigger: 'item'
-  },
-  bmap: {
-      center: [104.114129, 37.550339],
-      zoom: 5,
-      roam: true,
-      mapStyle: {
-          styleJson: [{
-              'featureType': 'water',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#d1d1d1'
-              }
-          }, {
-              'featureType': 'land',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#f3f3f3'
-              }
-          }, {
-              'featureType': 'railway',
-              'elementType': 'all',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'highway',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#fdfdfd'
-              }
-          }, {
-              'featureType': 'highway',
-              'elementType': 'labels',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'arterial',
-              'elementType': 'geometry',
-              'stylers': {
-                  'color': '#fefefe'
-              }
-          }, {
-              'featureType': 'arterial',
-              'elementType': 'geometry.fill',
-              'stylers': {
-                  'color': '#fefefe'
-              }
-          }, {
-              'featureType': 'poi',
-              'elementType': 'all',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'green',
-              'elementType': 'all',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'subway',
-              'elementType': 'all',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'manmade',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#d1d1d1'
-              }
-          }, {
-              'featureType': 'local',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#d1d1d1'
-              }
-          }, {
-              'featureType': 'arterial',
-              'elementType': 'labels',
-              'stylers': {
-                  'visibility': 'off'
-              }
-          }, {
-              'featureType': 'boundary',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#fefefe'
-              }
-          }, {
-              'featureType': 'building',
-              'elementType': 'all',
-              'stylers': {
-                  'color': '#d1d1d1'
-              }
-          }, {
-              'featureType': 'label',
-              'elementType': 'labels.text.fill',
-              'stylers': {
-                  'color': '#999999'
-              }
-          }]
-      }
-  },
-  series : [
-      {
-          name: '医生数量',
-          type: 'scatter',
-          coordinateSystem: 'bmap',
-          data: convertData(data),
-          symbolSize: function (val) {
-              return val[2] / 10;
-          },
-          encode: {
-              value: 2
-          },
-          label: {
-              formatter: '{b}',
-              position: 'right',
-              show: false
-          },
-          itemStyle: {
-              color: '#6666CC'
-          },
-          emphasis: {
-              label: {
-                  show: true
-              }
-          }
-      },
-      {
-          name: 'top 5',
-          type: 'effectScatter',
-          coordinateSystem: 'bmap',
-          data: convertData(data.sort(function (a, b) {
-              return b.value - a.value;
-          }).slice(0, 6)),
-          symbolSize: function (val) {
-              return val[2] / 10;
-          },
-          encode: {
-              value: 2
-          },
-          showEffectOn: 'render',
-          rippleEffect: {
-              brushType: 'stroke'
-          },
-          hoverAnimation: true,
-          label: {
-              formatter: '{b}',
-              position: 'right',
-              show: true
-          },
-          itemStyle: {
-              color: '#6666CC',
-              shadowBlur: 10,
-              shadowColor: '#333'
-          },
-          zlevel: 1
-      }
-  ]
+    title: {
+        text: ' ',
+        subtext: 'data from www.dxy.co',
+        sublink: 'http://www.dxy.com',
+        left: 'center'
+    },
+    tooltip : {
+        trigger: 'item'
+    },
+    bmap: {
+        center: [104.114129, 37.550339],
+        zoom: 5,
+        roam: true,
+        mapStyle: {
+            styleJson: [{
+                'featureType': 'water',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#d1d1d1'
+                }
+            }, {
+                'featureType': 'land',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#f3f3f3'
+                }
+            }, {
+                'featureType': 'railway',
+                'elementType': 'all',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'highway',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#fdfdfd'
+                }
+            }, {
+                'featureType': 'highway',
+                'elementType': 'labels',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'arterial',
+                'elementType': 'geometry',
+                'stylers': {
+                    'color': '#fefefe'
+                }
+            }, {
+                'featureType': 'arterial',
+                'elementType': 'geometry.fill',
+                'stylers': {
+                    'color': '#fefefe'
+                }
+            }, {
+                'featureType': 'poi',
+                'elementType': 'all',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'green',
+                'elementType': 'all',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'subway',
+                'elementType': 'all',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'manmade',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#d1d1d1'
+                }
+            }, {
+                'featureType': 'local',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#d1d1d1'
+                }
+            }, {
+                'featureType': 'arterial',
+                'elementType': 'labels',
+                'stylers': {
+                    'visibility': 'off'
+                }
+            }, {
+                'featureType': 'boundary',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#fefefe'
+                }
+            }, {
+                'featureType': 'building',
+                'elementType': 'all',
+                'stylers': {
+                    'color': '#d1d1d1'
+                }
+            }, {
+                'featureType': 'label',
+                'elementType': 'labels.text.fill',
+                'stylers': {
+                    'color': '#999999'
+                }
+            }]
+        }
+    },
+    series : [
+        {
+            name: '医生数量',
+            type: 'scatter',
+            coordinateSystem: 'bmap',
+            data: convertData(data),
+            symbolSize: function (val) {
+                return val[2] / 10;
+            },
+            encode: {
+                value: 2
+            },
+            label: {
+                formatter: '{b}',
+                position: 'right',
+                show: false
+            },
+            itemStyle: {
+                color: '#6666CC'
+            },
+            emphasis: {
+                label: {
+                    show: true
+                }
+            }
+        },
+        {
+            name: 'top 5',
+            type: 'effectScatter',
+            coordinateSystem: 'bmap',
+            data: convertData(data.sort(function (a, b) {
+                return b.value - a.value;
+            }).slice(0, 6)),
+            symbolSize: function (val) {
+                return val[2] / 10;
+            },
+            encode: {
+                value: 2
+            },
+            showEffectOn: 'render',
+            rippleEffect: {
+                brushType: 'stroke'
+            },
+            hoverAnimation: true,
+            label: {
+                formatter: '{b}',
+                position: 'right',
+                show: true
+            },
+            itemStyle: {
+                color: '#6666CC',
+                shadowBlur: 10,
+                shadowColor: '#333'
+            },
+            zlevel: 1
+        }
+    ]
 };;
 if (option && typeof option === "object") {
-  myChart.setOption(option, true);
+    myChart.setOption(option, true);
 }
-     </script>
+       </script>
 
             </div>
         </div>
