--- a/DJ.html
+++ b/DJ.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
@@ -22,33 +21,7 @@
 
 </head>
 <body>
-  <section class="menu cid-rUCcLHyWEW" once="menu" id="menu1-h">
-
-
-
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </button>
-        <div class="menu-logo">
-            <div class="navbar-brand">
-
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://gexiao37.github.io">Gussie</a></span>
-            </div>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-
-        </div>
-    </nav>
-</section>
-
-<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
+  <section class="mbr-section content4 cid-rUCiQegJzy" id="content4-k">
 
 
 
@@ -63,7 +36,7 @@
     </div>
 </section>
 
-<section class="mbr-section article content1 cid-rUCjzxQaFE" id="content1-l">
+<section class="engine"><a href="https://mobirise.ws/a">best website builder</a></section><section class="mbr-section article content1 cid-rUCjzxQaFE" id="content1-l">
 
 
 
@@ -688,7 +661,7 @@ var convertData = function (data) {
 
 option = {
     title: {
-        text: ' ',
+        text: '',
         subtext: 'data from www.dxy.co',
         sublink: 'http://www.dxy.com',
         left: 'center'
@@ -961,8 +934,6 @@ if (option && typeof option === "object") {
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
 
 
