--- a/DJ.html
+++ b/DJ.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best website builder</a></section><section class="mbr-section article content1 cid-rUCjzxQaFE" id="content1-l">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section article content1 cid-rUCjzxQaFE" id="content1-l">
 
 
 
@@ -535,12 +535,34 @@
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
-                    <div class="mbr-figure" style="width: 130%;">
+                    <div class="mbr-figure" style="width: 185%;">
                       <img src="assets/images/-436x64.png" alt="Mobirise" title="">
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
                             <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><em>双因素检验</em></strong><br>在这一部分我们将医生的评分与医生价格和问诊量进行了双因素检验，最后得出的结果P值均小于0.05，价格与医生评分的关系更加紧密。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section content6 cid-s2wtnBdydp" id="content6-3c">
+
+
+
+    <div class="container">
+        <div class="media-container-row">
+            <div class="col-12 col-md-8">
+                <div class="media-container-row">
+                    <div class="mbr-figure" style="width: 190%;">
+                      <img src="assets/images/-20200621135237-436x126.png" alt="Mobirise" title="">
+                    </div>
+                    <div class="media-content">
+                        <div class="mbr-section-text">
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><em>相关关系</em></strong><br>采用皮尔森积矩相关系数测量变量之间关系密切程度，通过计算两个变量的协方差与两个变量的标准差之积的比值来反应关系的强弱。如左图所示，评分与价格、评分与回答数交互的Pearson相关系数分别为0.069和0.039，且分别在1%和5%的水平上显著，因此认为“评分”和“价格”、“评分”和“回答数”间存在显著的正相关关系。<strong><em><br></em></strong></p>
                         </div>
                     </div>
                 </div>
@@ -558,7 +580,8 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">丁香园问诊医生来源分布</h1>
-                <div id="container" style="height: 400px"></div>
+                <body style="height: 100%; margin: 0">
+       <div id="container" style="height: 100%"></div>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
@@ -661,7 +684,7 @@ var convertData = function (data) {
 
 option = {
     title: {
-        text: '',
+        text: ' ',
         subtext: 'data from www.dxy.co',
         sublink: 'http://www.dxy.com',
         left: 'center'
@@ -906,7 +929,9 @@ if (option && typeof option === "object") {
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>综上，互联网医疗至今仍没冲破桎梏，无法替代线下医疗所起到的作用。然而，作为传统医疗的辅助性医疗体系，互联网医疗在医疗信息咨询这一方面作用突出。正如疫情期间，互联网医疗进入人们的视野，很大程度上是因为它可以及时地提供充足的医疗信息，免除交通的阻碍使得患者可以与医生进行交流。</p><p>十年前，当人们壮志凌云地提出互联网医疗这一概念时所描绘的线上医疗环境还未到来。创造新的生活方式、新的产业模式也需要天时地利人和。目前互联网医疗正通过疫情的机会进入人们的生活，伴随着新技术的帮助，它也将发挥更强大的作用。</p></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>综上，互联网医疗至今仍没冲破桎梏，无法替代线下医疗所起到的作用。然而，作为传统医疗的辅助性医疗体系，互联网医疗在医疗信息咨询这一方面作用突出。正如疫情期间，互联网医疗进入人们的视野，很大程度上是因为它可以及时地提供充足的医疗信息，免除交通的阻碍使得患者可以与医生进行交流。</p><p>十年前，当人们壮志凌云地提出互联网医疗这一概念时所描绘的线上医疗环境还未到来。创造新的生活方式、新的产业模式也需要天时地利人和。目前互联网医疗正通过疫情的机会进入人们的生活，伴随着新技术的帮助，它也将发挥更强大的作用。</p><p>目前，“互联网+医疗健康”模式的互联网医院正成为互联网医疗的新发展方向，我国已具有乌镇互联网医院、好大夫的银川智慧互联网医院、微医的宁夏互联网医院、银川丁香互联网医院、春雨的银川春雨互联网医院、京东的银川京东互联网医院、安心医生的银川云海翼互联网医院等。
+</p><p>它们具有两种模式。第一种模式是以医疗机构为主体，利用互联网信息技术拓展服务时间和空间，把互联网医院作为医疗机构的第二名称。第二种是一些互联网公司和企业已经申办了互联网医院，利用互联网公司提供的平台，为患者提供服务。
+</p><p>同线下实体医院相结合，互联网医疗不再是空中楼阁，也不再是传统医疗的竞争对手。合作共赢、取长补短，在未来，互联网医院将发挥它的优势，同传统医疗一起，更好地为大众提供医疗服务。</p></div>
         </div>
     </div>
 </section>
